
{2}Removed empty sections from generated SQL output.

{2}Improved color scheme.



{0}2020-02-07{1}

{2}New user setting WILDCARDSPACES allows treating the spacebar as the asterisk key.

{2}The file explorer no longer returns "file not found" for empty directories.



{0}2020-02-07{1}

{2}Table-valued paramaters with READONLY keyword are now supported.

{2}Fixed a minor console text formatting issue.

{2}Added PreCode section to files so additional T-SQL commands can be executed before each object is built.



{0}2020-07-01{1}

{2}Added reformat switch to FIX command for automatically beautifying messy code. THIS IS EXPERIMENTAL! Check your results before committing changes. For technical details, see: https://github.com/TaoK/PoorMansTSqlFormatter



{0}2020-07-08{1}

{2}The number of recent folderes remembered is now configurable via the SET command.

{2}The length limit of project names was increased to 30 characters.

{2}Added -AUTO switch to the FORGET command for quick cleanup of the folder list.

{2}Added directory styles via the SET command: full (classic), compact, and symbolic.

{2}Bug fixed: Square brackets [] in file names were causing unexpected results.



{0}2020-08-04{1}

{2}Fixed a bug in FORGET -AUTO that would skip over missing folders.

{2}USE command now accepts partial project nicknames. Ex: "USE my" and "USE pro" will work same as "USE myproject".



{0}2020-08-05{1}

{2}Added a new setting to automatically open new files in the configured text editor (default TRUE). Great suggestion, Yamil F.!



{0}2020-09-29{1}

{2}Added -CODE switch to limit search results to files containing pre- or post-code.


***not yet released***
{0}2020-11-13{1}

{2}Added -GIT switch to several file commands to find uncommitted files.

{2}Added <BOF> and <EOF> comments to generated output to make it easier to read through.

{2}Added more collation handlers to COMPARE command output to hopefully avoid collation conflicts during SQL exeucution.



