@@ -208,7 +208,11 @@
 ***not yet released***
 {0}2020-11-13{1}
 
-{2}Added -GIT switch to several file commands to find uncommitted files.
+{2}Removed GIT command.
+
+{2}Added -U switch to several file commands to find uncommitted files.
+
+{2}Added -H switch to DIR command to view commit history.
 
 {2}Added <BOF> and <EOF> comments to generated output to make it easier to read through.
 
